[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eutils"
version = "0.1"
authors = [
  {name = "Colin Gilgenbach", email = "hexane@mit.edu"}
]
description = ""
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
]

requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20,<1.29"  # tested on 1.26
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
]
