[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eutils"
version = "0.2"
authors = [
  {name = "Colin Gilgenbach", email = "hexane@mit.edu"}
]
description = ""
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
]

requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20,<2.3",  # tested on 1.26, 2.0
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
]

[project.scripts]
eutils = "eutils.main:main"